--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "rinvex/laravel-support",
+    "name": "ahmedzidan/laravel-support",
     "description": "Rinvex common support helpers, contracts, and traits required by various Rinvex packages. Validator functionality, and basic controller included out-of-the-box.",
     "type": "library",
     "keywords": [
@@ -39,7 +39,7 @@
         }
     ],
     "require": {
-        "php": "^8.0.0",
+        "php": "^8.0",
         "illuminate/auth": "^9.0.0 || ^10.0.0",
         "illuminate/bus": "^9.0.0 || ^10.0.0",
         "illuminate/contracts": "^9.0.0 || ^10.0.0",
@@ -47,7 +47,7 @@
         "illuminate/routing": "^9.0.0 || ^10.0.0",
         "illuminate/support": "^9.0.0 || ^10.0.0",
         "illuminate/validation": "^9.0.0 || ^10.0.0",
-        "felixkiss/uniquewith-validator": "dev-l9-compatibility",
+        "rinvex/tmp-watson-validating": "^6.0",
         "watson/validating": "^7.0.0",
         "spatie/laravel-schemaless-attributes": "^2.3.0"
     },
