--- a/composer.json
+++ b/composer.json
@@ -47,7 +47,7 @@
         "illuminate/routing": "^9.0.0 || ^10.0.0",
         "illuminate/support": "^9.0.0 || ^10.0.0",
         "illuminate/validation": "^9.0.0 || ^10.0.0",
-        "ahmedzidan/tmp-watson-validating": "dev-master",
+        "ahmedzidan/tmp-watson-validating": "^6.0.5",
         "watson/validating": "^7.0.0",
         "spatie/laravel-schemaless-attributes": "^2.3.0"
     },
